--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Hello, TeckAcademy!</h1>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </body>
+<head>
+<meta charset="UTF-8">
+<title>三ッ倉利晃　｜　About</title>
+<link rel="stylesheet" href="about.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+<![endif]-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+</head>
+<body>
+<div id="wapper">
+	<header>
+	  <nav>
+		  <ul>
+			  <li><a href="index.html">home</a></li>
+			  <li><a href="about.html" class="selected">About</a></li>
+			  <li><a href="contact.html">Contact</a></li>
+		  </ul>
+	  </nav>
+	  <div id="logo">
+		  <img src="profile.jpg" alt="証明写真" />
+		  <h1>三ッ倉利晃</h1>
+	  </div>
+	</header>
+  <div class="container">
+	  <section>
+		  <h2>About</h2>
+		  <h3>自己紹介</h3>
+		  <p>三ッ倉利晃（ディレクター）</p>
+		  <p>秋田県大館市。フリーランスで活動しています。</p>
+		  <p>最近は、<span class="red">ウェブ解析</span>や<span class="red">Ruby on Rails</span>を使って仕事をする機会が多くなりました。</p>
+		  <p>私のポートフォリオをみて気になった方は、<a href="contact.html">Contact</a>よりご連絡をお願い致します。</p>
+		  <h3>リンク</h3>
+		  <ul>
+		  	<li><a href="https://www.facebook.com/mitsukura" target="_blank">Facebook</a></li>
+		  	<li><a href="https://twitter.com/mitsukura/" target="_blank">twiiter</a></li>
+		  </ul>
+	  </section>
+	  <footer>
+	      <p>&copy; 2015 Toshiaki Mitsukura.</p>
+	  </footer>
+  </div>
+    
+</body>
 </html>
