--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 			letter-spacing:0.2em;
 		}
 		h2 {
+			padding:10px 50px;
+			margin:0 150px;
 			font-size:24px;
 			text-align:center;
 			color: pink;
 			letter-spacing:0.5em;
+			border-bottom:5px solid pink;
+			
 		}
 		h3{
 			text-align:center;
