--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		}
 		h2 {
 			padding:10px 50px;
-			margin:0 150px;
+			margin:0 150px 50px 150px;
 			font-size:24px;
 			text-align:center;
 			color: pink;
