--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<style>
 		body {
-			background-color: red;
+			background-color: #f8f8f8;
 			font-family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
 		}
 		.container {
@@ -22,23 +22,27 @@
 		
 		h1 {
 			font-size: 17px;
-			color: white;
+			color: #999;
 			text-align: center;
 			letter-spacing:0.2em;
 		}
 		h2 {
 			padding:10px 50px;
-			margin:0 150px 50px 150px;
+			margin:0 150px 30px 150px;
 			font-size:24px;
 			text-align:center;
-			color: pink;
+			color: #777;
 			letter-spacing:0.5em;
-			border-bottom:5px solid pink;
+			border-bottom:10px solid #ddd;
 			
 		}
 		h3{
+			padding:10px 50px;
+			margin:0 150px 10px 150px;			
 			text-align:center;
-			color:pink;
+			color:#777;
+			letter-spacing:0.5em;
+			border-bottom:10px solid #ddd;			
 		}
 		.icon {
 			text-align: center;
@@ -52,13 +56,14 @@
 		img{
 			margin: 50px 0 ;
 			max-width:200px;
-			border:5px solid #fff;
+			border:15px solid pink;
 			border-radius:100%;
 			text-align: center;
 		}
 		p {
-			color: pink;
-			margin:10px 150px 50px 150px;
+			color: #666;
+			margin:10px 150px 20px 150px;
+			font-size:13px;
 		}
 		p.footer{
 			text-align:center;
@@ -70,6 +75,11 @@
 			margin:0;
 			padding:0;
 		}
+		footer {
+			letter-spacing:0.1em;
+			margin-bottom:50px;
+		}
+		
       @media (max-width: 768px) {
 		p {
 			color: pink;
