--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 			color: #666;
 			margin:10px 150px 20px 150px;
 			font-size:13px;
+			letter-spacing:0.1em;
 		}
 		p.footer{
 			text-align:center;
@@ -116,10 +117,10 @@
 				<div class="col-sm-offset-3 col-sm-6 col-sm-offset-3">
 					<h2>自己紹介</h2> 
 					<p>三ッ倉利晃（みつくら　としあき）　秋田県大館市出身</p>
-					<p>20代は、東京でウェブ制作会社にウェブディレクターとして勤めていました。</p>
-					<p>30代は、家業を9年と、ウェブ制作・ウェブコンサルティングをフリーランスを6年ほどやっております。</p>
+					<p>20代は、大学卒業後、東京でウェブ制作会社にウェブディレクターとして勤めていました。</p>
+					<p>30代は、地元にもどり、家業を9年と、ウェブ制作・ウェブコンサルティングをフリーランスを6年ほどやっております。</p>
 					<p>昨年、上級ウェブ解析士取得しました。</p>
-					<p>30代最後は、html,css,jsの域を超えた言語を勉強するべく<span style="color: green; font-weight:bold;">【ruby on rails】</span>にも挑戦しウェブサービスを始めます。</p>
+					<p>30代最後は、html,css,jsの域を超えた言語を勉強するべく<span style="color: green; font-weight:bold;">【ruby on rails】</span>に挑戦しウェブサービスを始めます。</p>
 				</div>
 			</div>
 			<footer>
