--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>三ッ倉利晃｜About</title>
+	<meta name="description" content="TeckAcademyにさんかしている三ッ倉利晃の自己紹介文です。">
+	<meta name="keywords" content="自己紹介,三ッ倉利晃,秋田県大館市,フリーランス">
 	<!-- BootstrapのCSS読み込み -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<!-- jQuery読み込み -->
