--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
 		p {
 			color: green;
 			margin:0;
-		}        
+		}
+		hr{
+			display:none;
+		}
       }	
       @media (max-width: 325px) {
 		img{
@@ -119,7 +122,10 @@
 		p {
 			color: red;
 			margin: 0;
-		}        
+		}
+		hr{
+			display:none;
+		}
       }	      
 			</style>
 </head>
